# ipa_moveit_setup

./: README.md
ipa_hardware_config/: CMakeLists.txt  display_robot.launch  display_robot.launch~  package.xml  upload_robot.launch
ipa_hardware_config/robots/cob4-5/urdf/: cob4-5.urdf
ipa_hardware_config/robots/common/: raw3_base_driver.yaml~
ipa_hardware_config/robots/p_rob/config/: arm_cartesian_controller.yaml~  arm_controller.yaml~
ipa_hardware_config/robots/raw3-1/urdf/: properties.urdf.xacro
ipa_hardware_config/test/: urdf.test~
ipa_moveit_bringup/: CMakeLists.txt  package.xml
ipa_moveit_bringup/launch/: chomp_planning_pipeline.xml  default_warehouse_db.launch  demo.launch  demo.launch~  move_group.launch  move_group_dual_arm.launch  move_group_rviz.launch  ompl_planning_pipeline.xml  planning_context.xml~  planning_pipeline.xml  rviz.launch~  setup_assistant.launch  stomp_planning_pipeline.xml  warehouse.launch  warehouse_settings.xml
ipa_moveit_config/: CMakeLists.txt  package.xml~
ipa_moveit_config/launch/: upload_config.launch
ipa_moveit_config/robots/cob4-5/moveit/config/: cob4-5.srdf  constraints_limit.yaml  constraints_limit.yaml~  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_config.yaml  stomp_planning.yaml
ipa_moveit_config/robots/p_rob/moveit/config/: constraints_limit.yaml  constraints_limit.yaml~
ipa_moveit_config/robots/raw3-1/moveit/config/: chomp_planning.yaml  constraints_limit.yaml  constraints_limit.yaml~  raw3-1.srdf  (+3 more)
ipa_moveit_setup/: CMakeLists.txt  package.xml
(+4 files in other folders)
